--- a/main.html
+++ b/main.html
@@ -8,6 +8,20 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+   <div id="grid">
+	   <div>Row1 col1</div>
+	   <div>Row1 col2</div>
+	   <div>Row2 col1</div>
+	   <div>Row2 col2</div>
+	   <div>Row3 col1</div>
+	   <div>Row3 col2</div>
+   </div>
+
+
+
+
+
+	
     <script type="text/javascript" src="./script.js">
 </script>
 
